test/static/wrong/duplicate1.kk.out
test/static/wrong/duplicate1.kk(4, 1): error: Type static/wrong/duplicate1/dup is already defined