test/static/wrong/duplicate1.kk
alias dup = int
alias foo = dup
alias bar = foo
alias dup = list
